iou-app/objects/Apex_Method__c/Apex_Method__c.object-meta.xml
<CustomObject>
    <description>Apex Methods represent public methods in an Apex Class. There records are used to excavate, validate, and manage the automation obscured in the code.</description>
    <label>Apex Method</label>
    <nameField>
        <displayFormat>Method-{0000}</displayFormat>
        <label>Method Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Methods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>