iou-app/objects/Apex_Method__c/fields/Approved_Logic__c.field-meta.xml
<CustomField>
    <fullName>Approved_Logic__c</fullName>
    <description>The logic in its approved form, ready for implementation (remodeling).</description>
    <inlineHelpText>The logic in its approved form, ready for implementation (remodeling).</inlineHelpText>
    <label>Approved Logic</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>