iou-app/objects/Apex_Method__c/fields/As_Is__c.field-meta.xml
<CustomField>
    <fullName>As_Is__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the utility, need, or logic of the method remains poorly understood, even after validation. When marked &quot;As Is&quot;, we are not approving or disapproving of the logic, just letting it be. As more of the system is refactored, these methods may obtain clearer direction.</description>
    <inlineHelpText>The method cannot be validated or deprecated, for now, and is just left as is. This may change when more of the system is refactored.</inlineHelpText>
    <label>As Is</label>
    <type>Checkbox</type>
</CustomField>