iou-app/objects/Apex_Method__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <description>Use this to facilitate aligning logic and process to a specific domain. This will pave the way for domain based packaging.</description>
    <inlineHelpText>Use this to facilitate aligning logic and process to a specific domain. This will pave the way for domain based packaging.</inlineHelpText>
    <label>Domain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>