iou-app/objects/Apex_Method__c/fields/Failing_Persons__c.field-meta.xml
<CustomField>
    <fullName>Failing_Persons__c</fullName>
    <description>Any user, profile, or permission that the approved logic failed to uphold while testing.</description>
    <inlineHelpText>Any user, profile, or permission that the approved logic failed to uphold while testing.</inlineHelpText>
    <label>Failing Persons</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>