iou-app/objects/Apex_Method__c/fields/Future_Refactoring__c.field-meta.xml
<CustomField>
    <fullName>Future_Refactoring__c</fullName>
    <description>Use this to contain scope creep, while not lossing valuable requirements.</description>
    <inlineHelpText>Use this to contain scope creep, while not lossing valuable requirements.</inlineHelpText>
    <label>Future Refactoring</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>