iou-app/objects/Apex_Method__c/fields/Release_Notes__c.field-meta.xml
<CustomField>
    <fullName>Release_Notes__c</fullName>
    <description>Use this to store thoughts, text, etc. when communicating to external shareholders. Can be used to generate a report.</description>
    <inlineHelpText>Use this to store thoughts, text, etc. when communicating to external shareholders. Can be used to generate a report.</inlineHelpText>
    <label>Release Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>