iou-app/objects/Apex_Method__c/fields/Review_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Review_Sequence__c</fullName>
    <description>This field helps you organize the validation meeting. It can be used as desired and in any way you like.</description>
    <inlineHelpText>This field helps you organize the validation meeting. It can be used as desired and in any way you like.</inlineHelpText>
    <label>Review Sequence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>