iou-app/objects/Apex_Method__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The current state of the method in the refactoring lifecycle.</description>
    <inlineHelpText>The current state of the method in the refactoring lifecycle.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Refactoring</fullName>
            </value>
            <value>
                <fullName>Excavating</fullName>
            </value>
            <value>
                <fullName>Merged</fullName>
            </value>
            <value>
                <fullName>Validating</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Remodeling</fullName>
            </value>
            <value>
                <fullName>Ready to Deploy</fullName>
            </value>
            <value>
                <fullName>Deprecated</fullName>
            </value>
            <value>
                <fullName>QA Testing</fullName>
            </value>
            <value>
                <fullName>UAT Testing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>