iou-app/objects/Apex_Method__c/fields/Test_Persons__c.field-meta.xml
<CustomField>
    <fullName>Test_Persons__c</fullName>
    <description>Any user, profile, or permission that does execute this logic can be listed here. This is useful for testing.</description>
    <inlineHelpText>Any user, profile, or permission that does execute this logic can be listed here. This is useful for testing.</inlineHelpText>
    <label>Test Persons</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>