iou-app/objects/Apex_Method__c/fields/UAT_Steps__c.field-meta.xml
<CustomField>
    <fullName>UAT_Steps__c</fullName>
    <description>List out the steps that need to be executed to trigger this logic&apos;s entrance criteira. Also specify the expected outcome.</description>
    <inlineHelpText>List out the steps that need to be executed to trigger this logic&apos;s entrance criteira. Also specify the expected outcome.</inlineHelpText>
    <label>UAT Steps</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>